--- a/backend/model_implementation.ipynb
+++ b/backend/model_implementation.ipynb
@@ -74,206 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "f9d5118b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>driving_history_score</th>\n",
-       "      <th>credit_score</th>\n",
-       "      <th>low_education_ind</th>\n",
-       "      <th>marital_status</th>\n",
-       "      <th>time_driven</th>\n",
-       "      <th>area</th>\n",
-       "      <th>agecat_grouped</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>veh_color</th>\n",
-       "      <th>max_power</th>\n",
-       "      <th>engine_type</th>\n",
-       "      <th>veh_age</th>\n",
-       "      <th>veh_body_grouped</th>\n",
-       "      <th>veh_value</th>\n",
-       "      <th>claimcst0</th>\n",
-       "      <th>numclaims</th>\n",
-       "      <th>clm</th>\n",
-       "      <th>exposure</th>\n",
-       "      <th>claim_cst_per_exposure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>646.516469</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>161</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.80</td>\n",
-       "      <td>2023.198184</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.362191</td>\n",
-       "      <td>5585.998969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>635.400369</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>3600.172234</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.632068</td>\n",
-       "      <td>5695.859540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>646.463131</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>74</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.90</td>\n",
-       "      <td>2021.144067</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.367460</td>\n",
-       "      <td>5500.307127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>645.598794</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>121</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.79</td>\n",
-       "      <td>4006.845492</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.802184</td>\n",
-       "      <td>4994.920513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>657.348612</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.68</td>\n",
-       "      <td>2542.953931</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.485009</td>\n",
-       "      <td>5243.106060</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  driving_history_score  credit_score  low_education_ind  marital_status  \\\n",
-       "0   1                   73.0    646.516469                0.0             0.0   \n",
-       "1   2                   88.0    635.400369                0.0             1.0   \n",
-       "2   3                   55.0    646.463131                0.0             0.0   \n",
-       "3   4                   98.0    645.598794                0.0             0.0   \n",
-       "4   5                   66.0    657.348612                0.0             1.0   \n",
-       "\n",
-       "   time_driven  area  agecat_grouped  gender  veh_color  max_power  \\\n",
-       "0          1.0   1.0             2.0     0.0        0.0        161   \n",
-       "1          2.0   0.0             1.0     0.0        4.0        100   \n",
-       "2          2.0   2.0             1.0     0.0        3.0         74   \n",
-       "3          3.0   1.0             1.0     1.0        0.0        121   \n",
-       "4          2.0   2.0             2.0     1.0        1.0         75   \n",
-       "\n",
-       "   engine_type  veh_age  veh_body_grouped  veh_value    claimcst0  numclaims  \\\n",
-       "0          2.0        2               4.0       5.80  2023.198184          1   \n",
-       "1          0.0        4               3.0       5.67  3600.172234          1   \n",
-       "2          3.0        2               2.0       5.90  2021.144067          1   \n",
-       "3          0.0        3               3.0       4.79  4006.845492          1   \n",
-       "4          3.0        3               2.0       6.68  2542.953931          1   \n",
-       "\n",
-       "   clm  exposure  claim_cst_per_exposure  \n",
-       "0    1  0.362191             5585.998969  \n",
-       "1    1  0.632068             5695.859540  \n",
-       "2    1  0.367460             5500.307127  \n",
-       "3    1  0.802184             4994.920513  \n",
-       "4    1  0.485009             5243.106060  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'final_model_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m final_model_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclaim_cst_per_exposure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m final_model_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclaimcst0\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m final_model_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexposure\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m final_model_data\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'final_model_data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -839,46 +653,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "303bd2c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../backend/model_data_cleaned.csv')\n",
-    "# 1. Re-encoding function for agecat\n",
-    "def group_age_category(cat):\n",
-    "    \"\"\"Groups original agecat values into Young, Middle, or Elder.\"\"\"\n",
-    "    if cat == 1:\n",
-    "        return 'Young'\n",
-    "    elif cat == 6:\n",
-    "        return 'Elder'\n",
-    "    else:\n",
-    "        return 'Middle'\n",
-    "\n",
-    "# 2. Feature engineering: group 'veh_body'\n",
-    "def group_veh_body(body):\n",
-    "    \"\"\"Groups vehicle body types, keeping common ones and setting the rest to 'OTHER'.\"\"\"\n",
-    "    keep_bodies = ['SEDAN', 'STNWG', 'SUV', 'TRUCK', 'UTE', 'COUPE']\n",
-    "    if body in keep_bodies:\n",
-    "        return body\n",
-    "    else:\n",
-    "        return 'OTHER'\n",
-    "    \n",
-    "# --- Data Splitting and Feature Application ---\n",
-    "target = 'claimcst0'\n",
-    "train_data = model_data.loc[model_data['sample'] == '1|bld'].copy()\n",
-    "val_data = model_data.loc[model_data['sample'] == '2|val'].copy()\n",
-    "\n",
-    "# APPLY FEATURE ENGINEERING TO BOTH TRAIN AND VAL DATA\n",
-    "# Apply agecat_grouped creation\n",
-    "train_data['agecat_grouped'] = train_data['agecat'].apply(group_age_category)\n",
-    "val_data['agecat_grouped'] = val_data['agecat'].apply(group_age_category)\n",
-    "\n",
-    "# Apply veh_body grouping\n",
-    "train_data['veh_body_grouped'] = train_data['veh_body'].apply(group_veh_body)\n",
-    "val_data['veh_body_grouped'] = val_data['veh_body'].apply(group_veh_body)\n",
-    "\n",
-    "\n",
     "# --- Define Final Predictor List ---\n",
     "pred_lst = [\n",
     "    'low_education_ind',\n",
@@ -898,68 +677,19 @@
     "]\n",
     "\n",
     "# Define X and Y using the final list\n",
-    "X_train = train_data[pred_lst].copy()\n",
-    "X_val = val_data[pred_lst].copy()\n",
-    "y_train = train_data[target]\n",
-    "y_val = val_data[target]\n",
+    "X_train = final_model_data[pred_lst].copy()\n",
+    "X_val = final_model_val_data[pred_lst].copy()\n",
+    "y_train = final_model_data[target]\n",
+    "y_val = final_model_val_data[target]\n",
     "\n",
-    "# Redefine Num and Cat columns for the new list (needed for Target Encoding)\n",
-    "num_cols = ['driving_history_score', 'credit_score', 'time_driven', 'max_power', 'veh_age', 'veh_value']\n",
+    "# Redefine Num and Cat columns for the new list \n",
+    "num_cols = ['driving_history_score', 'credit_score', 'max_power', 'veh_value']\n",
     "cat_cols = [col for col in X_train.columns if col not in num_cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "516af675",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final X_train_processed dtypes (looking for 'object'):\n",
-      "Series([], dtype: object)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- 1. Fix the Column Type Lists (Crucial Step) ---\n",
-    "# Ensure 'time_driven' is treated as a CATEGORICAL column for encoding\n",
-    "num_cols = ['driving_history_score', 'credit_score', 'max_power', 'veh_age', 'veh_value']\n",
-    "cat_cols = [col for col in X_train.columns if col not in num_cols] # 'time_driven' is now correctly included here\n",
-    "\n",
-    "# --- 2. Initialization ---\n",
-    "X_train_encoded = X_train.copy()\n",
-    "X_val_encoded = X_val.copy()\n",
-    "\n",
-    "# --- 3. Apply Target Encoding (Now includes 'time_driven') ---\n",
-    "for col in cat_cols:\n",
-    "    # 1. Create a temporary DataFrame combining the feature (col) and the target\n",
-    "    temp_df = pd.DataFrame({'feature': X_train[col], 'target': y_train})\n",
-    "    \n",
-    "    # 2. Calculate the mean of the target for each category\n",
-    "    target_map = temp_df.groupby('feature')['target'].mean()\n",
-    "\n",
-    "    # 3. Apply the calculated mean to both training and validation data\n",
-    "    X_train_encoded[col] = X_train_encoded[col].map(target_map)\n",
-    "    X_val_encoded[col] = X_val_encoded[col].map(target_map).fillna(y_train.mean())\n",
-    "\n",
-    "    X_train_encoded[col] = X_train_encoded[col].astype(float)\n",
-    "    X_val_encoded[col] = X_val_encoded[col].astype(float)\n",
-    "\n",
-    "# Finalize Processed DataFrames\n",
-    "X_train_processed = X_train_encoded\n",
-    "X_val_processed = X_val_encoded\n",
-    "\n",
-    "# --- 4. Final Dtype Check (Should all be numeric now) ---\n",
-    "print(\"Final X_train_processed dtypes (looking for 'object'):\")\n",
-    "print(X_train_processed.dtypes[X_train_processed.dtypes == 'object'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "a0b3ae82",
    "metadata": {},
    "outputs": [
@@ -978,7 +708,7 @@
    ],
    "source": [
     "# 1. Create DMatrix (using the newly processed cleaned data)\n",
-    "dtrain = xgb.DMatrix(X_train_processed, label=y_train)\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
     "\n",
     "# 2. Define Parameters for XGBoost\n",
     "params = {\n",
@@ -1002,24 +732,25 @@
     "\n",
     "\n",
     "# Extract the best number of rounds and performance\n",
-    "best_n_estimators_cleaned = cv_results_cleaned.shape[0]\n",
-    "best_rmse_cleaned = cv_results_cleaned['test-rmse-mean'].min()\n",
+    "best_n_estimators = cv_results.shape[0]\n",
+    "best_rmse = cv_results['test-rmse-mean'].min()\n",
+    "best_num_boost_round = len(cv_results)\n",
     "\n",
-    "print(f\"Optimal n_estimators: {best_n_estimators_cleaned}\")\n",
-    "print(f\"CV Test RMSE: {best_rmse_cleaned:.4f}\")\n",
+    "print(f\"Optimal n_estimators: {best_n_estimators}\")\n",
+    "print(f\"CV Test RMSE: {best_rmse:.4f}\")\n",
     "\n",
     "# 4. Train the Final Model on the entire training set\n",
-    "xgb_model_final_cleaned = xgb.train(\n",
+    "xgb_model_final = xgb.train(\n",
     "    params=params,\n",
     "    dtrain=dtrain,\n",
-    "    num_boost_round=best_n_estimators_cleaned\n",
+    "    num_boost_round=best_n_estimators\n",
     ")\n",
     "print(\"Final model training with cleaned data complete.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "eab24671",
    "metadata": {},
    "outputs": [
@@ -1062,7 +793,7 @@
     ")\n",
     "\n",
     "print(\"\\nStarting NEW Randomized Hyperparameter Search for 'claimscst0'...\")\n",
-    "random_search.fit(X_train_processed, y_train)\n",
+    "random_search.fit(X_train, y_train)\n",
     "\n",
     "#Extract results\n",
     "best_params = random_search.best_params_\n",
@@ -1712,10 +1443,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6faaf52c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>low_education_ind</td>\n",
+       "      <td>137804688.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>engine_type</td>\n",
+       "      <td>56773680.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>area</td>\n",
+       "      <td>43138232.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>marital_status</td>\n",
+       "      <td>42285172.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>time_driven</td>\n",
+       "      <td>39911388.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>credit_score</td>\n",
+       "      <td>34549000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>gender</td>\n",
+       "      <td>32941188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>driving_history_score</td>\n",
+       "      <td>32859116.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>veh_value</td>\n",
+       "      <td>32575092.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>max_power</td>\n",
+       "      <td>31743778.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>veh_color</td>\n",
+       "      <td>31296084.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>veh_age</td>\n",
+       "      <td>26357610.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>agecat_grouped</td>\n",
+       "      <td>22124068.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Feature   Importance\n",
+       "0       low_education_ind  137804688.0\n",
+       "10            engine_type   56773680.0\n",
+       "5                    area   43138232.0\n",
+       "3          marital_status   42285172.0\n",
+       "4             time_driven   39911388.0\n",
+       "2            credit_score   34549000.0\n",
+       "7                  gender   32941188.0\n",
+       "1   driving_history_score   32859116.0\n",
+       "12              veh_value   32575092.0\n",
+       "9               max_power   31743778.0\n",
+       "8               veh_color   31296084.0\n",
+       "11                veh_age   26357610.0\n",
+       "6          agecat_grouped   22124068.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# calculate feature importance\n",
     "importance = model.get_score(importance_type='gain')\n",
