code cleaning part 2

--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -4114,34 +4114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "e2dd4bf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data.to_csv('../backend/model_data.csv', index=False)\n",
-    "inference_data.to_csv('../backend/inference_data.csv', index=False)"
+    "# model_data.to_csv('../backend/model_data.csv', index=False)\n",
+    "# inference_data.to_csv('../backend/inference_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "eccef3d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_final.to_csv('../backend/train_df_final.csv', index=False)\n",
-    "val_df_final.to_csv('../backend/val_df_final.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "7ec93565",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inf_df_final.to_csv('../backend/inf_df_final.csv', index=False)"
+    "# train_df_final.to_csv('../backend/train_df_final.csv', index=False)\n",
+    "# val_df_final.to_csv('../backend/val_df_final.csv', index=False)\n",
+    "# inf_df_final.to_csv('../backend/inf_df_final.csv', index=False)"
    ]
   }
  ],
