--- a/backend/tweedie_model_implementation.ipynb
+++ b/backend/tweedie_model_implementation.ipynb
@@ -2277,18 +2277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "54b4941d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1) Save the trained model\n",
-    "joblib.dump(model, \"../backend/models/freq_sev_xgboost/model.pkl\")\n",
+    "#joblib.dump(model, \"../backend/models/freq_sev_xgboost/model.pkl\")\n",
     "\n",
     "# 2) Save the exact feature column order used to fit the model\n",
-    "feature_columns = list(X_val.columns)  # if you trained with a DataFrame\n",
-    "with open(\"../backend/models/freq_sev_xgboost/feature_columns.json\", \"w\") as f:\n",
-    "    json.dump(feature_columns, f)"
+    "# feature_columns = list(X_val.columns)  # if you trained with a DataFrame\n",
+    "# with open(\"../backend/models/freq_sev_xgboost/feature_columns.json\", \"w\") as f:\n",
+    "    # json.dump(feature_columns, f)"
    ]
   }
  ],
